AUTOMAKE_OPTIONS = foreign

sbin_PROGRAMS = xsnmp

xsnmp_SOURCES = \
    src/main.c \
    src/command.c \
    src/fsTable.c \
    src/log.c \
    src/ram.c \
    src/util.c \
    src/xsanAffinityTable.c \
    src/xsanNodeTable.c \
    src/xsanStripeGroupTable.c \
    src/xsanVolumeTable.c \
    src/xsnmpInternal.c \
    src/raidInfo.c \
    src/raidSetTable.c \
    src/raidVolumeTable.c \
    src/raidDriveTable.c
